--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -11,3 +11,7 @@
     display flex
     justify-content space-between
     align-items center
+.df-jsc-ac
+    display flex
+    align-items center
+    justify-content center
