--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -15,3 +15,12 @@
     display flex
     align-items center
     justify-content center
+
+.header-content
+  width 1190px
+  height 100%
+  margin 0 auto
+  padding-bottom 35px
+@media screen and (max-width: 1200px)
+  .header-content
+    width 960px 
