--- a/src/assets/stylus/reset.styl
+++ b/src/assets/stylus/reset.styl
@@ -2,6 +2,13 @@
     margin 0
     padding 0
 
+body
+  margin 0
+  padding 0
+  -webkit-font-smoothing antialiased
+  font-family "-apple-system","BlinkMacSystemFont","Roboto","Helvetica Neue","MIcrosoft YaHei",sans-serif !important
+  background-color #F8F8F8
+
 html,body
     line-height 1
     font-weight normal
@@ -13,3 +20,14 @@ ul
         
 a
     text-decoration none
+
+// element-ui 样式重置
+.el-carousel__button
+    width 10px
+.el-carousel__arrow
+    background-color #333
+    width 40px
+    height 40px
+    font-size 20px
+    &:hover
+        background-color #333
