--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -15,7 +15,10 @@
     display flex
     align-items center
     justify-content center
-
+.ellipsis
+  white-space nowrap
+  overflow hidden
+  text-overflow ellipsis
 .header-content
   width 1190px
   height 100%
