--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -7,6 +7,14 @@
         line-height 0
         clear both/*清除所有的脱离文档流*/
         visibility hidden/*不可见但会占位*/
+    &::before
+        content ''
+        display block
+        height 0
+        line-height 0
+        clear both/*清除所有的脱离文档流*/
+        visibility hidden/*不可见但会占位*/
+    
 .df-jsb-ac
     display flex
     justify-content space-between
