--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -27,4 +27,7 @@
   white-space nowrap
   overflow hidden
   text-overflow ellipsis
-
+.bg-prs
+    background-position 50%
+    background-repeat no-repeat
+    background-size 100%
