--- a/src/assets/stylus/common.styl
+++ b/src/assets/stylus/common.styl
@@ -5,9 +5,7 @@
   width 1190px
   height 100%
   margin 0 auto
-@media screen and (max-width: 1200px)
-  .header-content
-    width 960px 
+  
 
 .header-title-module
   padding-top 28px
@@ -23,7 +21,15 @@
       height 46px
 .header-search-module
   padding-top 28px
+
+.poi-detail
+  background-color #fff
+  border 1px solid #e5e5e5
+  box-shadow 0 5px 14px 0 rgba(0,0,0,0.1)
+  border-radius 10px
 @media screen and (max-width 1200px)
+  .header-content
+    width 960px 
   .header-title-module
     padding-right 40px
     min-width 200px
