--- a/src/assets/stylus/common.styl
+++ b/src/assets/stylus/common.styl
@@ -33,3 +33,9 @@
   .header-title-module
     padding-right 40px
     min-width 200px
+
+@keyframes fadeInAni 
+  0%
+    opacity 0
+  100%
+    opacity 1
