add-detail_iconfont

--- a/src/assets/font/index.css
+++ b/src/assets/font/index.css
@@ -1,3 +1,4 @@
 @import './home/com-header/iconfont.css';
 @import './home/left-banner/iconfont.css';
 @import './home/main/iconfont.css';
+@import './detail/iconfont.css';
